--- a/style.css
+++ b/style.css
@@ -25,6 +25,15 @@ html {
   margin-bottom: 15rem;
   border-bottom: 0.3rem solid #333;
 }
+.section-sub-heading {
+  font-size: 2rem;
+  color: #333;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  margin-bottom: 10rem;
+  border-left: 0;
+  border-bottom: 0.2rem solid #333;
+}
 /* End of common section */
 /* section 1 */
 .section-1 {
@@ -134,6 +143,16 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.introduction {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.education {
+  border: 2px solid black;
+  padding-left: 0;
+  align-content: center;
 }
 
 .progress-bars-wrapper {
